[gd_scene load_steps=22 format=3 uid="uid://cc0umwa7rqjg7"]

[ext_resource type="Script" path="res://scene/game_object/bat_enemy/bat_enemy.gd" id="1_5u02l"]
[ext_resource type="PackedScene" uid="uid://wholtg8uvfyr" path="res://scene/component/health_component.tscn" id="2_epdu7"]
[ext_resource type="PackedScene" uid="uid://dpfix8562eey3" path="res://scene/component/velocity_component.tscn" id="3_a7ru5"]
[ext_resource type="PackedScene" uid="uid://b0dm8p8ja7xu6" path="res://scene/component/vial_drop_component.tscn" id="4_sn5re"]
[ext_resource type="PackedScene" uid="uid://c0vxjuupismjv" path="res://scene/component/hit_flash_component.tscn" id="5_ry8em"]
[ext_resource type="Shader" path="res://scene/component/hit_flash_component.gdshader" id="6_ur1sb"]
[ext_resource type="PackedScene" uid="uid://cln76lbqufo2y" path="res://scene/component/death_component.tscn" id="7_cbcv7"]
[ext_resource type="PackedScene" uid="uid://egwp7sp6wg4b" path="res://scene/component/random_stream_player_2d_component.tscn" id="8_3efrm"]
[ext_resource type="AudioStream" uid="uid://b8dt1jgwfou1j" path="res://assets/audio/footstep_carpet_000.ogg" id="9_k7yt2"]
[ext_resource type="AudioStream" uid="uid://bth8q8cp2txwp" path="res://assets/audio/footstep_carpet_001.ogg" id="10_y8am7"]
[ext_resource type="AudioStream" uid="uid://c2ih7q7h3q26m" path="res://assets/audio/footstep_carpet_002.ogg" id="11_82qub"]
[ext_resource type="AudioStream" uid="uid://bh8unpuvtfx7k" path="res://assets/audio/footstep_carpet_003.ogg" id="12_2hwjd"]
[ext_resource type="AudioStream" uid="uid://gnxwevvbdb8a" path="res://assets/audio/footstep_carpet_004.ogg" id="13_sglb2"]
[ext_resource type="Texture2D" uid="uid://d1j1r5slqk7xg" path="res://scene/game_object/bat_enemy/bat.png" id="14_htbt4"]
[ext_resource type="PackedScene" uid="uid://betf7u4vsx8d4" path="res://scene/component/hurtbox_component.tscn" id="15_frq5x"]

[sub_resource type="Animation" id="Animation_iq4ya"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vyxfr"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhmiw"]
_data = {
"RESET": SubResource("Animation_iq4ya"),
"walk": SubResource("Animation_vyxfr")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xfmye"]
resource_local_to_scene = true
shader = ExtResource("6_ur1sb")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7364l"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7tu58"]
radius = 4.0

[node name="BatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_5u02l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hhmiw")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_epdu7")]
max_health = 30.0

[node name="VelocityComponent" parent="." instance=ExtResource("3_a7ru5")]
max_speed = 110
acceleration = 0.75

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_sn5re")]
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_ry8em")]
health_component = NodePath("../HealthComponent")
hit_flash_material = SubResource("ShaderMaterial_xfmye")
sprite = NodePath("../Visuals/Sprite2D")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("7_cbcv7")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomStreamPlayer2DComponent" parent="." instance=ExtResource("8_3efrm")]
streams = Array[AudioStream]([ExtResource("9_k7yt2"), ExtResource("10_y8am7"), ExtResource("11_82qub"), ExtResource("12_2hwjd"), ExtResource("13_sglb2")])

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -7)
texture = ExtResource("14_htbt4")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("15_frq5x")]
position = Vector2(0, -7)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_7364l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_7tu58")
